@@ -20,3 +20,6 @@ commands=
 changedir=testing
 commands=
     {envpython} -m pytest -rfsxX --junitxml={envlogdir}/junit-{envname}0.xml [io_ code]
+
+[pytest]
+rsyncdirs = conftest.py py doc testing
