@@ -10,7 +10,8 @@ Changes between 1.3.4 and 2.0.0dev0
 - use apipkg-1.1 and make py.apipkg.initpkg|ApiModule available
 - add py.iniconfig module for brain-dead easy ini-config file parsing
 - introduce py.builtin.any()
-- path objects have a .dirname attribute now
+- path objects have a .dirname attribute now (equivalent to
+  os.path.dirname(path))
 - path.visit() accepts breadthfirst (bf) and sort options
 
 Changes between 1.3.3 and 1.3.4
